--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>Keith Brady Portfolio</title>
 		<meta charset="utf-8" />
@@ -58,39 +58,68 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>About Me...</h2>
+						<p>Hello all! My name is Keith Brady, and I am an IT/Cybersecurity nerd with 20 years of experience in Information Technology. I have worked at some amazing non-profits, helping to create a better world for people through improvements in education (k-college), biosciences (DNA, RNA, GMO, Bioinformatics) and medical education (Drs, PAs, NPs, DOs and Nurses). I have been obtaining my Bachelor of Sciences in Cybersecurity with a Data Analytics minor at SHNU where I have maintained a 3.8+ GPA and made the Honor Roll every term. I started school 1.5 years ago with some transfer credits for previous college work and certifications. My interest in Cybersecurity started a long time ago but it became the industry I wanted to get into since helping a previous employer obtain a SOC 2 certification. We had to analyze our current company and all of its intricacies, assess and develop frameworks and controls, and finally implement them all. This enabled us to follow SOC 2 trust principles: security, availability, processing integrity, confidentiality, and privacy. Since then, I have learned a lot more cybersecurity frameworks, tools, platforms, cloud computing, analysis, coding, and methods. Please check out some of my projects and other areas of interest below.</p>
 					</header>
+				<div class="container">
+					<header>
+						<h2>Here's some of the stuff I do.</h2>
+						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+				  </header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
+								<span class="icon solid featured fa-sitemap"></span>
+								<h3>Cloud Architecture</h3>
+								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+							</section>
+					  </div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-tasks"></span>
+								<h3>Security Frameworks</h3>
 								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
+								<span class="icon solid featured fa-database"></span>
+								<h3>Data Analytics&nbsp;</h3>
 								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
+				  </div>
+					<div> 
 					</div>
-					
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-microchip"></span>
+								<h3>AI/LLM/GPT/AGI</h3>
+								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+							</section>
+					  </div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-people-carry"></span>
+								<h3>Teamwork&nbsp;</h3>
+								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-user-secret"></span>
+								<h3>OSINT</h3>
+								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+							</section>
+					  </div>
+				  </div>
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I have worked on recently.</h2>
-</header>
+						<h2>Here’s some other stuff I have worked on recently.</h2>
+					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
@@ -98,7 +127,7 @@
 								<h3><a href="#">Magna feugiat</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
-						</div>
+					  </div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
@@ -134,8 +163,8 @@
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
-					</div>
-				</div>
+				  </div>
+			  </div>
 			</article>
 					<footer>
 						<ul id="copyright">
@@ -150,6 +179,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+	</div>
+		</article>
 	</body>
 </html>
