--- a/index.html
+++ b/index.html
@@ -59,58 +59,51 @@
 				<div class="container">
 					<header>
 						<h2>About Me...</h2>
-						<p>Hello all! My name is Keith Brady, and I am an IT/Cybersecurity nerd with 20 years of experience in Information Technology. I have worked at some amazing non-profits, helping to create a better world for people through improvements in education (k-college), biosciences (DNA, RNA, GMO, Bioinformatics) and medical education (Drs, PAs, NPs, DOs and Nurses). I have been obtaining my Bachelor of Sciences in Cybersecurity with a Data Analytics minor at SHNU where I have maintained a 3.8+ GPA and made the Honor Roll every term. I started school 1.5 years ago with some transfer credits for previous college work and certifications. My interest in Cybersecurity started a long time ago but it became the industry I wanted to get into since helping a previous employer obtain a SOC 2 certification. We had to analyze our current company and all of its intricacies, assess and develop frameworks and controls, and finally implement them all. This enabled us to follow SOC 2 trust principles: security, availability, processing integrity, confidentiality, and privacy. Since then, I have learned a lot more cybersecurity frameworks, tools, platforms, cloud computing, analysis, coding, and methods. Please check out some of my projects and other areas of interest below.</p>
+						<p>My name is Keith Brady, and I am an IT/Cybersecurity nerd with 20 years of experience in Information Technology. I have worked at some amazing non-profits, helping to create a better world for people through improvements in education (k-college), biosciences (DNA, RNA, GMO, Bioinformatics) and medical education (Drs, PAs, NPs, DOs and Nurses). I have been obtaining my Bachelor of Sciences in Cybersecurity with a Data Analytics minor at SHNU where I have maintained a 3.8+ GPA and made the Honor Roll every term. I started school 1.5 years ago with some transfer credits for previous college work and certifications. My interest in Cybersecurity started a long time ago but it became the industry I wanted to get into since helping a previous employer obtain a SOC 2 certification. We had to analyze our current company and all of its intricacies, assess and develop frameworks and controls, and finally implement them all. This enabled us to follow SOC 2 trust principles: security, availability, processing integrity, confidentiality, and privacy. Since then, I have learned a lot more cybersecurity frameworks, tools, platforms, cloud computing, analysis, coding, and methods. Please check out some of my projects and other areas of interest below.</p>
 					</header>
 				<div class="container">
 					<header>
 						<h2>Here's some of the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
 				  </header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
+								<a href="resume.html">
+								<span class="icon solid featured fa-book-open"></span>
+								<h3>My Resume&nbsp;</h3>
+							</section>
+								</a> 
+					  </div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
 								<span class="icon solid featured fa-sitemap"></span>
 								<h3>Cloud Architecture</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+                            </section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-database"></span>
+								<h3>Data Analytics&nbsp;</h3>
+							</section>
+						</div>
+				  </div>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-microchip"></span>
+								<h3>AI/LLM/GPT/AGI</h3>
 							</section>
 					  </div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-tasks"></span>
 								<h3>Security Frameworks</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-database"></span>
-								<h3>Data Analytics&nbsp;</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-						</div>
-				  </div>
-					<div> 
-					</div>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-microchip"></span>
-								<h3>AI/LLM/GPT/AGI</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-							</section>
-					  </div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-people-carry"></span>
-								<h3>Teamwork&nbsp;</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-user-secret"></span>
-								<h3>OSINT</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>OSINT/Tools/Misc.</h3>
 							</section>
 					  </div>
 				  </div>
@@ -118,7 +111,7 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some other stuff I have worked on recently.</h2>
+						<h2>Here are projects I have worked on recently.</h2>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
@@ -180,6 +173,7 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 	</div>
-		</article>
+	</div>
+	</article>
 	</body>
 </html>
