Updates to code

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 					<li><a href="index.html">Home</a></li>
 				</ul>
 			</nav>
-
+	</body>
 		<!-- Home -->
 			<article id="top" class="wrapper style1">
 				<div class="container">
@@ -46,7 +46,7 @@
 				<div class="container">
 					<header>
 						<h2>Resume</h2>
-						<iframe src='assets/docs/KABResume.html' width=1000px height= 900px frameborder='0'></iframe>
+						<iframe src="assets/docs/KABResume.html" width="1000px" height="900px" frameborder="0"></iframe>
 					</header>
 				  </div>
 						<footer>
@@ -54,7 +54,8 @@
 							<li>&copy; phrohike.github.io. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
-
+		</article>
+		
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -62,6 +63,4 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-	</div>
-	</body>
 </html>
