--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<a href="resume.html">
+								<a href="sub/resume.html">
 								<span class="icon solid featured fa-book-open"></span>
 								<h3>My Resume&nbsp;</h3>
 							</section>
