--- a/sub/resume.html
+++ b/sub/resume.html
@@ -9,14 +9,14 @@
 		<title>Keith Brady Resume</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
-					<li><a href="index.html">Home</a></li>
+					<li><a href="../index.html">Home</a></li>
 				</ul>
 			</nav>
 	</body>
@@ -25,7 +25,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/Circle-Keith-Bradysmall.png" alt="" /></span>
+							<span class="image fit"><img src="../images/Circle-Keith-Bradysmall.png" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -46,7 +46,7 @@
 				<div class="container">
 					<header>
 						<h2>Resume</h2>
-						<iframe src="assets/docs/KABResume.html" width="1000px" height="900px" frameborder="0"></iframe>
+						<iframe src="../assets/docs/KABResume.html" width="1000px" height="900px" frameborder="0"></iframe>
 					</header>
 				  </div>
 						<footer>
@@ -57,10 +57,10 @@
 		</article>
 		
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 </html>
