--- a/index.html
+++ b/index.html
@@ -71,19 +71,23 @@
 								<a href="sub/resume.html">
 								<span class="icon solid featured fa-book-open"></span>
 								<h3>My Resume&nbsp;</h3>
+								</a>
 							</section>
-								</a> 
 					  </div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
+								<a href="sub/resume.html">
 								<span class="icon solid featured fa-sitemap"></span>
 								<h3>Cloud Architecture</h3>
+								</a>
                             </section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-database"></span>
+								<a href="sub/resume.html">
 								<h3>Data Analytics&nbsp;</h3>
+								</a>
 							</section>
 						</div>
 				  </div>
@@ -91,19 +95,25 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-microchip"></span>
+								<a href="sub/resume.html">
 								<h3>AI/LLM/GPT/AGI</h3>
+								</a>
 							</section>
 					  </div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-tasks"></span>
+								<a href="sub/resume.html">
 								<h3>Security Frameworks</h3>
+								</a>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-user-secret"></span>
+								<a href="sub/resume.html">
 								<h3>OSINT/Tools/Misc.</h3>
+								</a>
 							</section>
 					  </div>
 				  </div>
