--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					  </div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<a href="sub/resume.html">
+								<a href="sub/ca.html">
 								<span class="icon solid featured fa-sitemap"></span>
 								<h3>Cloud Architecture</h3>
 								</a>
@@ -85,7 +85,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-database"></span>
-								<a href="sub/resume.html">
+								<a href="sub/da.html">
 								<h3>Data Analytics&nbsp;</h3>
 								</a>
 							</section>
@@ -95,7 +95,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-microchip"></span>
-								<a href="sub/resume.html">
+								<a href="sub/ai.html">
 								<h3>AI/LLM/GPT/AGI</h3>
 								</a>
 							</section>
@@ -103,7 +103,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-tasks"></span>
-								<a href="sub/resume.html">
+								<a href="sub/sf.html">
 								<h3>Security Frameworks</h3>
 								</a>
 							</section>
@@ -111,7 +111,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-user-secret"></span>
-								<a href="sub/resume.html">
+								<a href="sub/misc.html">
 								<h3>OSINT/Tools/Misc.</h3>
 								</a>
 							</section>
