--- a/sub/template.html
+++ b/sub/template.html
@@ -45,10 +45,10 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Resume</h2>
-						<iframe src="../assets/docs/KABResume.html" width="1000px" height="900px" frameborder="0"></iframe>
+						<h2>Coming Soon......</h2>
+						<!---- Add Text --->
+						<!---- Here --->
 					</header>
-				<a href="../assets/docs/KeithABrady_Resume.docx"> Resume Download (.docx)</a>
 				  </div>
 						<footer>
 						<ul id="copyright">
