--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="textstyle1"><div id="container_7ff8c789"><div id="container_7ff8c789_padding" ><div class="textstyle1"><table id="table_4df4f27" cellpadding="3" cellspacing="1" >	<tr>
 		<td width="33%" height="220px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_77b764d8">
     <div class="textstyle1">
-<div id="container_281fe99"<span class="fa-solid fa-user"></span>><div id="container_281fe99_padding" ></div></div><span class="textstyle4"><br/></span>      </div>
+<div id="container_281fe99"><i class="fa-solid fa-sitemap center fa-10x"></i><div id="container_281fe99_padding" ></div></div><span class="textstyle4"><br/></span>      </div>
     <div class="textstyle2">
 <span class="textstyle13"><a href="sub/ce.html">Cloud Engineering</a></span>      </div>
     </div>
