--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
 		</td>
 		<td width="33%" height="220px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_4b9a073a">
     <div class="textstyle1">
-<div id="container_68e3b2c9"><div id="container_68e3b2c9_padding" ></div></div><span class="textstyle4"><br/></span>      </div>
+<div id="container_68e3b2c9"><i class="fa-solid fa-microchip center fa-10x fa-blue"></i>><div id="container_68e3b2c9_padding" ></div></div><span class="textstyle4"><br/></span>      </div>
     <div class="textstyle2">
 <span class="textstyle13"><a href="sub/ai.html">AI/LLM/GPT/Agents/AGI</a></span>      </div>
     </div>
 		</td>
 		<td width="33%" height="220px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_1fa0001a">
     <div class="textstyle1">
-<div id="container_1dd26cd"><div id="container_1dd26cd_padding" ></div></div><span class="textstyle4"><br/></span>      </div>
+<div id="container_1dd26cd"><i class="fa-solid fa-file-lines center fa-10x fa-blue"></i>
+><div id="container_1dd26cd_padding" ></div></div><span class="textstyle4"><br/></span>      </div>
     <div class="textstyle2">
 <span class="textstyle13"><a href="sub/sf.html">Security Frameworks/GRC</a></span>      </div>
     </div>
@@ -56,21 +57,24 @@
 	<tr>
 		<td width="33%" height="290px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_64b656e5">
     <div class="textstyle1">
-<div id="container_44bdc134"><div id="container_44bdc134_padding" ></div></div><span class="textstyle4"><br/></span>      </div>
+<div id="container_44bdc134"><i class="fa-solid fa-shield center fa-10x fa-blue"></i>
+><div id="container_44bdc134_padding" ></div></div><span class="textstyle4"><br/></span>      </div>
     <div class="textstyle2">
 <span class="textstyle13"><a href="sub/sf.html">Cloud Security</a></span>      </div>
     </div>
 		</td>
 		<td width="33%" height="290px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_7e5cdcd">
     <div class="textstyle1">
-<div id="container_226d4505"><div id="container_226d4505_padding" ></div></div><span class="textstyle4"><br/></span>      </div>
+<div id="container_226d4505"><i class="fa-solid fa-clipboard-list center fa-10x fa-blue"></i>
+><div id="container_226d4505_padding" ></div></div><span class="textstyle4"><br/></span>      </div>
     <div class="textstyle2">
 <span class="textstyle13"><a href="sub/risk.html">Risk assessment, analysis, and management</a></span>      </div>
     </div>
 		</td>
 		<td width="33%" height="290px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_5c1636c2">
     <div class="textstyle1">
-<div id="container_40e87384"><div id="container_40e87384_padding" ></div></div><span class="textstyle4"><br/></span>      </div>
+<div id="container_40e87384"><i class="fa-solid fa-user-secret center fa-10x fa-blue"></i>
+><div id="container_40e87384_padding" ></div></div><span class="textstyle4"><br/></span>      </div>
     <div class="textstyle2">
 <span class="textstyle13"><a href="sub/ctf.html">Awards/CTFs/THM/BTL/Etc.</a></span>      </div>
     </div>
