--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 <div class="textstyle1"><table id="table_554fe58f" cellpadding="3" cellspacing="1" >	<tr>
 		<td width="33%" height="220px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_203c19b5">
     <div class="textstyle1">
-<div id="container_74966c12"><div id="container_74966c12_padding" ></div></div><span class="textstyle4"><br/>test index overwrite</span>      </div>
+<div id="container_74966c12"><div id="container_74966c12_padding" ><div class="textstyle2"><i class="fa-solid fa-sitemap center fa-10x fa-blue"></div>
+<div style="clear:both"></div></div></div><span class="textstyle4"><br/>test index overwrite</span>      </div>
     </div>
 		</td>
 		<td width="33%" height="220px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_514d2553">
