--- a/sub/template.html
+++ b/sub/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> 
+<html lang="En"> 
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,10 +14,10 @@
 </div>
 </div></div><span class="textstyle4">   </span><span class="textstyle4">  </span><span class="textstyle4">  </span></div>
 <div style="clear:both"></div></div></div></div>
-<div style="clear:both"></div></div></div><div id="container_52a573a4"><div id="container_52a573a4_padding" ></div></div><div id="container_2c0dbea0"><div id="container_2c0dbea0_padding" ><div class="textstyle2">  <span class="textstyle5">Page Title</span>
+<div style="clear:both"></div></div></div><div id="container_52a573a4"><div id="container_52a573a4_padding" ></div></div><div id="container_2c0dbea0"><div id="container_2c0dbea0_padding" ><div class="textstyle2">  <span class="textstyle5">Coming Soon...</span>
 </div>
 </div></div><div id="container_637542e9"><div class="textstyle1"><span class="textstyle4"><br/><br/><br/><br/></span></div>
-<div class="textstyle2"><div id="container_76c2aff2"><div id="container_76c2aff2_padding" ><div class="textstyle1"><div id="container_66e5429d"><div id="container_66e5429d_padding" ><div class="textstyle1">  <span class="textstyle6">Content</span>
+<div class="textstyle2"><div id="container_76c2aff2"><div id="container_76c2aff2_padding" ><div class="textstyle1"><div id="container_66e5429d"><div id="container_66e5429d_padding" ><div class="textstyle1">  <span class="textstyle6">Coming Soon...</span>
 </div>
 </div></div></div>
 <div style="clear:both"></div></div></div></div>
