--- a/sub/template.html
+++ b/sub/template.html
@@ -36,7 +36,7 @@
 </div><div id="container_52a573a4"><div id="container_52a573a4_padding" ></div></div><div id="container_2c0dbea0"><div id="container_2c0dbea0_padding" ><div class="textstyle2">  <span class="textstyle4">Coming Soon...</span>
 </div>
 </div></div><div id="container_637542e9"><div class="textstyle1"><span class="textstyle5"><br/><br/><br/><br/></span></div>
-<div class="textstyle2"><div id="container_76c2aff2"><div id="container_76c2aff2_padding" ><div class="textstyle1"><div id="container_66e5429d"><div id="container_66e5429d_padding" ><div class="textstyle1">  <span class="textstyle6">Coming Soon...</span>
+<div class="textstyle2"><div id="container_76c2aff2"><div id="container_76c2aff2_padding" ><div class="textstyle1"><div id="container_66e5429d"><div id="container_66e5429d_padding" ><div class="textstyle1">  <span class="textstyle6">Keith Brady #DATE#<br/><br/>#IMAGE#<br/><br/><br/>Goal <br/><br/><br/>The Build/The Steps/The Process<br/><br/><br/>Conclusion<br/><br/><br/>Links</span>
 </div>
 </div></div></div>
 <div style="clear:both"></div></div></div></div>
