--- a/sub/blogposts.html
+++ b/sub/blogposts.html
@@ -37,15 +37,15 @@
 </div>
 </div></div><div id="container_7d6eadac"><div class="textstyle1"><span class="textstyle5"><br/><br/><br/><br/></span></div>
 <div class="textstyle2"><div id="container_8948010"><div id="container_8948010_padding" ><div class="textstyle1"><div id="container_59fc5940"><div id="container_59fc5940_padding" ><div class="textstyle1"><div id="container_2973da70"><div id="container_2973da70_padding" ><div class="textstyle1"><table id="table_629472c" cellpadding="3" cellspacing="1" >	<tr>
-		<td width="33%" height="322px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_594c6e66">
+		<td width="33%" height="302px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_594c6e66">
     <div class="textstyle1">
 <div id="container_496808fc"><div id="container_496808fc_padding" ><div class="textstyle1"><div id="container_2d0cc218"><div id="container_2d0cc218_padding" ><div class="textstyle2"><a href="../posts/awshpdeploy.html"><img src="../images/honeypot.png" width="640" height="640" id="img_502a3849" alt="" title="" border="0" /></a></div>
 <div style="clear:both"></div></div></div><span class="textstyle5"><br/></span></div>
-<div class="textstyle2"><span class="textstyle6"><a href="../posts/awshpdeploy.html" class="wsp5e11d928">Setup Honeypot on AWS for Traffic Analysis</a></span></div>
+<div class="textstyle2"><span class="textstyle6"><a href="../posts/awshpdeploy.html" class="wsp5e11d928">Honeypot on AWS for Traffic Analysis</a></span></div>
 <div style="clear:both"></div></div></div><span class="textstyle5"><br/></span>      </div>
     </div>
 		</td>
-		<td width="33%" height="322px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_36726bd2">
+		<td width="33%" height="302px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_36726bd2">
     <div class="textstyle1">
 <div id="container_3dc23dd"><div id="container_3dc23dd_padding" ><div class="textstyle1"><div id="container_bf93e17"><div id="container_bf93e17_padding" ><div class="textstyle2"><a href="../posts/vircyberlabs.html"><img src="../images/hacksnreens.png" width="1024" height="1024" id="img_3defd5da" alt="" title="" border="0" /></a></div>
 <div style="clear:both"></div></div></div><span class="textstyle5"><br/></span></div>
@@ -53,7 +53,7 @@
 <div style="clear:both"></div></div></div><span class="textstyle5"><br/></span>      </div>
     </div>
 		</td>
-		<td width="33%" height="322px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_5a461f47">
+		<td width="33%" height="302px" style="vertical-align: top; overflow:hidden; ">  <div id="cell_5a461f47">
     <div class="textstyle1">
 <div id="container_5290aaf6"><div id="container_5290aaf6_padding" ><div class="textstyle1"><div id="container_65c1df42"><div id="container_65c1df42_padding" ><div class="textstyle2"><span class="textstyle5"><br/></span><a href="../posts/splunklab1.html"><img src="../images/dalle_splunk__1200x685.png" width="1200" height="685" id="img_73dbe1f0" alt="" title="" border="0" /></a></div>
 <div style="clear:both"></div></div></div><span class="textstyle5"><br/></span></div>
